--- a/src/BlazorUI/Demo/Client/Shared/Styles/bit-css-variables.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Styles/bit-css-variables.scss
@@ -1,15 +1,15 @@
 /*-------- Colors --------*/
 $bit-color-primary-main: var(--bit-clr-primary-main);
-$bit-color-primary-light: var(--bit-clr-primary-light);
-$bit-color-primary-lighter: var(--bit-clr-primary-lighter);
-$bit-color-primary-dark: var(--bit-clr-primary-dark);
-$bit-color-primary-darker: var(--bit-clr-primary-darker);
+$bit-color-primary-high: var(--bit-clr-primary-high);
+$bit-color-primary-higher: var(--bit-clr-primary-higher);
+$bit-color-primary-low: var(--bit-clr-primary-low);
+$bit-color-primary-lower: var(--bit-clr-primary-lower);
 
 $bit-color-secondary-main: var(--bit-clr-secondary-main);
-$bit-color-secondary-light: var(--bit-clr-secondary-light);
-$bit-color-secondary-lighter: var(--bit-clr-secondary-lighter);
-$bit-color-secondary-dark: var(--bit-clr-secondary-dark);
-$bit-color-secondary-darker: var(--bit-clr-secondary-darker);
+$bit-color-secondary-high: var(--bit-clr-secondary-high);
+$bit-color-secondary-higher: var(--bit-clr-secondary-higher);
+$bit-color-secondary-low: var(--bit-clr-secondary-low);
+$bit-color-secondary-lower: var(--bit-clr-secondary-lower);
 
 //texts
 $bit-color-text-primary: var(--bit-clr-txt-primary);
